Encrypt/Decrypt content with 004 schema (and persist items_key's)
--> references #182

--- a/Source/AlephNote.PluginInterface/AlephNote.PluginInterface.csproj
+++ b/Source/AlephNote.PluginInterface/AlephNote.PluginInterface.csproj
@@ -19,6 +19,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.2.1" />
+		<PackageReference Include="Sodium.Core" Version="1.2.3" />
 		<PackageReference Include="System.Xml.XDocument" Version="4.3.0" />
 		<PackageReference Include="System.Diagnostics.FileVersionInfo" Version="4.3.0" />
 	</ItemGroup>
