--- a/Source/AlephNote.PluginInterface/AlephNote.PluginInterface.csproj
+++ b/Source/AlephNote.PluginInterface/AlephNote.PluginInterface.csproj
@@ -15,11 +15,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\External\CSharpUtils\LanguageUtils\LanguageUtils.csproj" />
+    <ProjectReference Include="..\External\libsodium-core\src\Sodium.Core\Sodium.Core.csproj" />
   </ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.2.1" />
-		<PackageReference Include="Sodium.Core" Version="1.2.3" />
 		<PackageReference Include="System.Xml.XDocument" Version="4.3.0" />
 		<PackageReference Include="System.Diagnostics.FileVersionInfo" Version="4.3.0" />
 	</ItemGroup>
