--- a/Source/AlephNote.Common/AlephNote.Common.csproj
+++ b/Source/AlephNote.Common/AlephNote.Common.csproj
@@ -2,6 +2,10 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.0</TargetFrameworks>
+
+    <AssemblyVersion>1.7.0.0</AssemblyVersion>
+    <FileVersion>1.7.0.0</FileVersion>
+    <Version>1.7.0.0</Version>
 		
 		<AssemblyName>AlephNote.Common</AssemblyName>
 		<PackageId>AlephNote.Common</PackageId>
