--- a/Source/Plugins/StandardNotePlugin/StandardNotePlugin.csproj
+++ b/Source/Plugins/StandardNotePlugin/StandardNotePlugin.csproj
@@ -29,6 +29,10 @@
 		<ProjectReference Include="..\..\External\CSharpUtils\LanguageUtils\LanguageUtils.csproj"> <!-- This is only here to prevent LanguageUtils.dll in the /Plugins/ directory  -->
 			<Private>false</Private>
 		</ProjectReference>
+
+		<ProjectReference Include="..\..\External\libsodium-core\src\Sodium.Core\Sodium.Core.csproj"> <!-- This is only here to prevent LanguageUtils.dll in the /Plugins/ directory  -->
+			<Private>false</Private>
+		</ProjectReference>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -36,9 +40,9 @@
 			<ExcludeAssets>runtime</ExcludeAssets>
 		</PackageReference>
 
-		<PackageReference Include="System.Xml.XDocument" Version="4.3.0">
-			<ExcludeAssets>runtime</ExcludeAssets>
-		</PackageReference>
+    <PackageReference Include="System.Xml.XDocument" Version="4.3.0">
+      <ExcludeAssets>runtime</ExcludeAssets>
+    </PackageReference>
 	</ItemGroup>
 
 </Project>
