Fix submodule path

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,5 +2,5 @@
 	path = Source/External/CSharpUtils
 	url = https://github.com/Mikescher/CSharpUtils.git
 [submodule "Source\\External\\libsodium-core"]
-	path = Source\\External\\libsodium-core
+	path = Source/External/libsodium-core
 	url = https://github.com/Mikescher/libsodium-core.git
